src/tests/snapshots/ppl__tests__multifile.hir.snap
---
source: src/tests/mod.rs
expression: hir
---
use greet.greet <:String>
greet "World"

==MONOMORPHIZED==
