src/tests/snapshots/ppl__tests__ppl.hir.snap
---
source: src/tests/mod.rs
expression: hir
---
use core.*
use array.*
use i32.*
use f64.*
use memory.*
use threads.*
use math.*
use printable.*

==MONOMORPHIZED==
