src/tests/snapshots/ppl__tests__ppl.ir.snap
---
source: src/tests/mod.rs
expression: ir
---
; ModuleID = 'lib'
source_filename = "/Users/gavrilikhin_d/Code/ppl/ppl/src/lib.ppl"

define void @lib.execute() !dbg !3 {
  br label %return

return:                                           ; preds = %0
  ret void
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "/Users/gavrilikhin_d/Code/ppl/ppl/src/lib.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "lib.execute", linkageName: "lib.execute", scope: !2, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
