src/tests/snapshots/ppl__tests__predeclare_vars.ir.snap
---
source: src/tests/mod.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "src/main.ppl"

%"Type<String>" = type { %String, %Integer }
%String = type { ptr }
%Integer = type { ptr }

@"Type<String>" = private global %"Type<String>" zeroinitializer
@0 = private unnamed_addr constant [7 x i8] c"String\00", align 1
@x = global %Integer zeroinitializer
@y = global %Integer zeroinitializer

define private void @initialize() !dbg !3 {
  %1 = alloca %"Type<String>", align 8, !dbg !7
  %"Type<String>.name" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 0, !dbg !7
  %2 = call %String @string_from_c_string_and_length(ptr @0, i64 6), !dbg !8
  store %String %2, ptr %"Type<String>.name", align 8, !dbg !8
  %"Type<String>.size" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 1, !dbg !8
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !8
  store %Integer %3, ptr %"Type<String>.size", align 8, !dbg !8
  %4 = load %"Type<String>", ptr %1, align 8, !dbg !8
  store %"Type<String>" %4, ptr @"Type<String>", align 8, !dbg !8
  br label %return, !dbg !8

return:                                           ; preds = %0
  ret void
}

declare %String @string_from_c_string_and_length(ptr, i64)

declare %Integer @integer_from_i64(i64)

define void @main.execute() !dbg !9 {
  call void @initialize(), !dbg !10
  call void @initialize.1(), !dbg !11
  call void @initialize.2(), !dbg !12
  %1 = call %Integer @clone_integer(ptr @y), !dbg !13
  call void @"println <:Integer>"(%Integer %1), !dbg !13
  call void @destroy_integer(ptr @x), !dbg !14
  call void @destroy_integer(ptr @y), !dbg !15
  br label %return, !dbg !15

return:                                           ; preds = %0
  ret void
}

define private void @initialize.1() !dbg !16 {
  %1 = call %Integer @integer_from_i64(i64 1), !dbg !17
  store %Integer %1, ptr @x, align 8, !dbg !17
  br label %return, !dbg !17

return:                                           ; preds = %0
  ret void
}

define %Integer @"get x"() !dbg !18 {
  %return_value = alloca %Integer, align 8
  %1 = call %Integer @clone_integer(ptr @x), !dbg !19
  %"$tmp@22" = alloca %Integer, align 8, !dbg !19
  store %Integer %1, ptr %"$tmp@22", align 8, !dbg !19
  %2 = load %Integer, ptr %"$tmp@22", align 8, !dbg !19
  store %Integer %2, ptr %return_value, align 8, !dbg !19
  br label %return, !dbg !19

return:                                           ; preds = %0
  %3 = load %Integer, ptr %return_value, align 8
  ret %Integer %3
}

declare %Integer @clone_integer(ptr)

define private void @initialize.2() !dbg !20 {
  %1 = call %Integer @"get x"(), !dbg !21
  store %Integer %1, ptr @y, align 8, !dbg !21
  br label %return, !dbg !21

return:                                           ; preds = %0
  ret void
}

define %Integer @"get y"() !dbg !22 {
  %return_value = alloca %Integer, align 8
  %1 = call %Integer @clone_integer(ptr @y), !dbg !23
  %"$tmp@51" = alloca %Integer, align 8, !dbg !23
  store %Integer %1, ptr %"$tmp@51", align 8, !dbg !23
  %2 = load %Integer, ptr %"$tmp@51", align 8, !dbg !23
  store %Integer %2, ptr %return_value, align 8, !dbg !23
  br label %return, !dbg !23

return:                                           ; preds = %0
  %3 = load %Integer, ptr %return_value, align 8
  ret %Integer %3
}

define private void @"println <:Integer>"(%Integer %0) !dbg !24 {
  %x = alloca %Integer, align 8
  store %Integer %0, ptr %x, align 8
  %2 = load %Integer, ptr %x, align 8, !dbg !25
  %3 = call %String @integer_as_string(%Integer %2), !dbg !25
  call void @"println <:String>"(%String %3), !dbg !25
  br label %return, !dbg !25

return:                                           ; preds = %1
  ret void
}

declare void @"println <:String>"(%String)

declare %String @integer_as_string(%Integer)

declare void @destroy_integer(ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "src/main.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "initialize", linkageName: "initialize", scope: !2, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 6, column: 9, scope: !3)
!8 = !DILocation(line: 0, scope: !3)
!9 = distinct !DISubprogram(name: "main.execute", linkageName: "main.execute", scope: !2, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!10 = !DILocation(line: 6, column: 9, scope: !9)
!11 = !DILocation(line: 0, column: 8, scope: !9)
!12 = !DILocation(line: 3, column: 8, scope: !9)
!13 = !DILocation(line: 6, column: 8, scope: !9)
!14 = !DILocation(line: 0, scope: !9)
!15 = !DILocation(line: 3, scope: !9)
!16 = distinct !DISubprogram(name: "initialize.1", linkageName: "initialize.1", scope: !9, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!17 = !DILocation(line: 0, column: 8, scope: !16)
!18 = distinct !DISubprogram(name: "get x", linkageName: "get x", scope: !9, file: !2, line: 1, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!19 = !DILocation(line: 1, column: 12, scope: !18)
!20 = distinct !DISubprogram(name: "initialize.2", linkageName: "initialize.2", scope: !9, file: !2, line: 3, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!21 = !DILocation(line: 3, column: 8, scope: !20)
!22 = distinct !DISubprogram(name: "get y", linkageName: "get y", scope: !9, file: !2, line: 4, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!23 = !DILocation(line: 4, column: 12, scope: !22)
!24 = distinct !DISubprogram(name: "println <:Integer>", linkageName: "println <:Integer>", scope: !9, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!25 = !DILocation(line: 6, column: 9, scope: !24)
